# LocalUtilityBox

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  DISTRIBUTION_GUIDE.md  Dockerfile  GUI_COMPLETE.md  GUI_GUIDE.md  IMPROVEMENTS.md  MANIFEST.in  PACKAGE_READY.md  README.md  SECURITY.md  build_package.py  install.bat  install.sh  install_dev.py  install_gui.py  install_instructions.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
LocalUtilityBox.app/Contents/: Info.plist
LocalUtilityBox.app/Contents/MacOS/: localutilitybox
examples/: basic_usage.py
myenv/: pyvenv.cfg
src/: __init__.py  cli.py
src/file_management/: __init__.py  add_watermark.py  compress_pdf.py  csv_to_excel.py  csv_to_json.py  doc_to_pdf.py  excel_to_csv.py  json_to_csv.py  merge_pdf.py  pdf_to_doc.py  pdf_to_jpg.py  pdf_to_png.py  rotate_pdf.py  split_pdf.py
src/gui/: __init__.py  audio_video_gui.py  document_conversion_gui.py  image_processing_gui.py  launcher.py  main_app.py  main_gui.py  pdf_management_gui.py  utils.py  widgets.py
src/gui/tabs/: file_tab.py  image_tab.py  video_tab.py
src/image_processing/: __init__.py  extract_img_metadata.py  extract_text_from_img.py  generate_qr.py  heic_to_jpg.py  img_to_greyscale.py  img_to_pdf.py  jpg_to_png.py  long_png_to_pdf.py  photos_to_gif.py  png_to_jpg.py  reduce_img_size.py  remove_background.py  tiff_to_jpg.py  webp_to_jpg.py  webp_to_png.py
src/utils/: base_converter.py  error_handling.py  logging_config.py
src/video_audio_manipulation/: __init__.py  extract_audio_from_video.py  video_to_gif.py
tests/: __init__.py  conftest.py  test_cli.py  test_file_management.py  test_image_processing.py  test_utils.py
